# Tiny-Introduction-to-Fiducial-Markers

./: README.md
Project/: CMakeLists.txt  EXAMPLES.md
Project/data/: ava.mesh
Project/src/apps/: appA.cpp  appB.cpp
Project/src/apps/appAFunctions/: functions.cpp  functions.hpp
Project/src/apps/appBFunctions/: functions.cpp  functions.hpp
Project/src/auxiliar/: printMarkers.cpp  testOvis.cpp
